# zed-todo-tree

./: .gitignore  Cargo.toml  README.md  extension.toml  extension.wasm
grammars/: comment.wasm
src/: cli.rs  formatter.rs  lib.rs  slash_commands.rs  types.rs
