[package]
name = "zed-todo-tree"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Zed editor extension that integrates the todo-tree CLI functionality into the Zed editor."
keywords = ["zed", "extension", "todo", "todo-tree", "productivity"]

[lib]
crate-type = ["cdylib"]

[dependencies]
todo-tree-core = { path = "../../core" }
zed_extension_api = "0.7.0"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
